--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,16 @@ const canonicalUrl = canonical || `https://gynecologistnearme.in${Astro.url.path
     <meta name="google-site-verification" content="mxIuPgMil-TxvnKzbiivpYHkCseuxg91RW1HVEQqsyM" />
     <title>{title}</title>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZR4ZRBQ44"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WZR4ZRBQ44');
+    </script>
+    
     <!-- Canonical URL -->
     <link rel="canonical" href={canonicalUrl} />
     
